# seripack

./: .gitignore  Cargo.toml  README.md
seripack/: Cargo.toml  Pipfile  setup.py
seripack/seripack/packet/: abstractions.py  decorators.py
seripack/seripack/packet_set/: decorators.py
seripack/seripack/serialization/: decorators.py  interfaces.py  metaclasses.py
seripack/seripack/serialization/serializers/: pickle.py
seripack/seripack/tests/: packet.py
seripack/src/: encoder.rs  lib.rs  packet.rs  router.rs  serialization.rs
seripack/src/router/: encoder.rs
seripack/src/serialization/: serializers.rs  standard.rs
seripack/src/serialization/serializers/: blosc.rs
seripack/tests/: mod.rs  packet.rs
seripack/tests/router/: macro.rs  manual.rs  mod.rs
seripack_macros/: Cargo.toml
seripack_macros/src/: lib.rs  route.rs  route_v2.rs  utils.rs
seripack_macros/src/utils/: attribute_args_ext.rs  meta_ext.rs  nested_meta_ext.rs
seripack_macros/tests/: route.rs
seripack_py/packet_set/: interfaces.py
seripack_py/serialization/: new_serialization.py
