[package]
name = "seripack_macros"
version = "0.1.0"
description = "Proc macros for seripack"
license = "MIT"
edition = "2021"


[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["extra-traits", "full"]}
trybuild = "1.0.71"
